--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,4 +110,8 @@ steps:
       while ($true) {  
           Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"  
           Start-Sleep -Seconds 300  
+      }      # Keep runner active indefinitely (or until manually cancelled)  
+      while ($true) {  
+          Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"  
+          Start-Sleep -Seconds 300  
       }
